...
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        showingCreateTimer = true
                    } label: {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("addTimerButton")
                }
            }
            .sheet(isPresented: $showingCreateTimer) {
                CreateTimerView()
            }
            .onChange(of: notificationHandler.selectedTimerID) { oldValue, newValue in
...
